Finally got all the spacing correct.

--- a/css/main.css
+++ b/css/main.css
@@ -30,6 +30,8 @@ nav ul li, footer ul li {
 .postTitle {
     color: black;
     text-decoration: none;
+    margin-bottom: 0em;
+    margin-top: 0.5em;
 }
 a.postTitle:visited {
     color:#999;
@@ -71,18 +73,16 @@ footer {
     font-size: 15px;
     width: 85%;
     font-family: 'arial','serif';
+    margin-top: 0em;
 }
 ul.posts { 
     font-size: 1.5em;
     padding: 0px;
+    margin-top: 0px;
+    margin-bottom: 0.4em;
 }
 ul.posts li {
     list-style: none;
-}
-.postTitle h1.postTitle h3.postTitle {
-    text-decoration: none;
-    color: black;
-    margin-bottom: 0em;
 }
 .postDate {
     font-size: 95%;
